fix(markdown): Numbered list spacing and margins.

--- a/source/css/_partials/markdown.styl
+++ b/source/css/_partials/markdown.styl
@@ -19,9 +19,12 @@ main.post
   h1, h2, h3, h4, h5, h6
     margin 2 * $margin-base 0
 
-  ul
-    margin-left 8 * $margin-base
+  ul, ol
+    margin-left 4 * $margin-base
     margin-bottom 4 * $margin-base
+    margin-top 4 * $margin-base
+    li
+      margin-bottom: 2 * $margin-base
 
   hr
     border 0
